# gcp-docai-pyservice

./: .gitignore  README.md  docker-compose.yml
service/: Dockerfile  alembic.ini  backend_prestart.py  entrypoint.sh  initial_data.py  main.py  prestart.sh  pyproject.toml  tests.sh  tests_prestart.py
service/admin/controllers/: __init__.py  user.py
service/admin/crud/: crud_user.py
service/admin/models/: __init__.py  user.py
service/admin/router/: __init__.py  login.py  user.py
service/admin/schemas/: __init__.py  token.py  user.py
service/alembic/: env.py
service/core/: config.py  security.py
service/crud/: __init__.py  base.py
service/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
service/docai/: __init__.py
service/docai/admin/controllers/: user.py
service/docai/admin/crud/: __init__.py  crud_user.py
service/docai/admin/models/: user.py
service/docai/admin/router/: login.py  user.py
service/docai/admin/schemas/: msg.py
service/docai/api/v1/: __init__.py  upload.py
service/docai/api/v1/gcp/docai/: form_parser.py
service/docai/core/: config.py  security.py
service/docai/crud/: base.py
service/docai/db/: __init__.py  base.py  init_db.py  session.py
service/docai/gcp/: extraction.py
service/tests/: __init__.py  conftest.py
service/tests/admin/: test_login.py  test_users.py
service/tests/api/v1/: test_upload.py
service/tests/crud/: test_user.py
service/tests/utils/: __init__.py  user.py  utils.py
